traffic-routing-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-vs
spec:
  hosts:
  - simple
  http:
  - route:
    - destination:
        host: simple
        subset: primary
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simple-dr
spec:
  host: simple
  subsets:
  - name: primary
    labels:
      pipecd.dev/variant: primary
  - name: canary
    labels:
      pipecd.dev/variant: canary
  - name: baseline
    labels:
      pipecd.dev/variant: baseline
